[gd_scene load_steps=2 format=3 uid="uid://dukd5dlcgo210"]

[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_rgyp0"]

[node name="Spawner" type="Node2D"]
position = Vector2(0, -1)
script = ExtResource("1_rgyp0")

[node name="Timer3" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
autostart = true

[node name="Timer4" type="Timer" parent="."]
process_callback = 0
wait_time = 8.0
autostart = true

[node name="Timer5" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0
autostart = true

[connection signal="timeout" from="Timer3" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_timer_timeout"]
